objects/ASI_CRM_Pros_Image_Level__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Criteria_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Criteria Threshold</label>
        <referenceTo>ASI_CRM_Criteria_Threshold__c</referenceTo>
        <relationshipLabel>Pros Image Levels</relationshipLabel>
        <relationshipName>ASI_PROS_Pros_Image_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Pros_Segmentation__c</fullName>
        <label>Pros Segmentation</label>
        <referenceTo>ASI_CRM_Pros_Segmentation__c</referenceTo>
        <relationshipLabel>Pros Image Levels</relationshipLabel>
        <relationshipName>ASI_PROS_Pros_Image_Levels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Statement__c</fullName>
        <formula>ASI_CRM_SG_Criteria_Threshold__r.ASI_CRM_SG_Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Score__c</fullName>
        <label>Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Pros Image Level</label>
    <listViews>
        <fullName>ASI_CRM_TW_PROS_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Criteria_Threshold__c</columns>
        <columns>ASI_CRM_SG_Statement__c</columns>
        <columns>ASI_CRM_SG_Answer__c</columns>
        <columns>ASI_CRM_SG_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pros_Image_Level__c.ASI_CRM_TW_Pros_Image_Level</value>
        </filters>
        <label>TW PROS Image Levels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_PROS_Image_Levels</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Pros_Segmentation__c</columns>
        <columns>ASI_CRM_SG_Criteria_Threshold__c</columns>
        <columns>ASI_CRM_SG_Statement__c</columns>
        <columns>ASI_CRM_SG_Answer__c</columns>
        <columns>ASI_CRM_Score__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pros_Image_Level__c.ASI_CRM_VN_ProsImageLevel</value>
        </filters>
        <label>VN PROS Image Levels</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Pros_Segmentation__c</columns>
        <columns>ASI_CRM_SG_Statement__c</columns>
        <columns>ASI_CRM_SG_Answer__c</columns>
        <columns>ASI_CRM_SG_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SG</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Pros_Segmentation__c</columns>
        <columns>ASI_CRM_SG_Statement__c</columns>
        <columns>ASI_CRM_SG_Answer__c</columns>
        <columns>ASI_CRM_SG_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Pros_Image_Level__c.ASI_CRM_SG_ProsImageLevel</value>
        </filters>
        <label>SG</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IL-{0000000000}</displayFormat>
        <label>Pros Image Level ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pros Image Levels</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Pros_Image_Level</fullName>
        <active>true</active>
        <label>ASI CRM MY Pros Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_ProsImageLevel</fullName>
        <active>true</active>
        <label>ASI CRM SG ProsImageLevel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Pros_Image_Level</fullName>
        <active>true</active>
        <label>ASI CRM TH Pros Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Pros_Image_Level</fullName>
        <active>true</active>
        <label>ASI CRM TW Pros Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_ProsImageLevel</fullName>
        <active>true</active>
        <label>ASI CRM VN ProsImageLevel</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>